--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ ready(function() {
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
 <div style="font-size: 72px;" class="antialias">
-<div align="center">Miami University<br></div><div align="left"><div align="center">ACM<br></div><br><div>Amazon Echo Development<br></div></div>
+<div align="center">Miami University<br></div><div align="left"><div align="center">ACM<br></div><br><div>Amazon Echo Development<br>By Matt DePero<br></div></div>
 </div>
 </div>
 </div>
